[gd_scene load_steps=2 format=3 uid="uid://b163wrbe72fm5"]

[ext_resource type="Script" path="res://scene/ui/IngameMenu.gd" id="1_s8iie"]

[node name="IngameMenu" type="CanvasLayer"]
process_mode = 2
script = ExtResource("1_s8iie")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Resume" type="Button" parent="Menu"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -79.5
offset_right = 100.0
offset_bottom = -48.5
grow_horizontal = 2
grow_vertical = 2
text = "Resume"

[node name="Options" type="Button" parent="Menu"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -39.5
offset_right = 100.0
offset_bottom = -8.5
grow_horizontal = 2
grow_vertical = 2
text = "Options
"

[node name="Quit to Main Menu" type="Button" parent="Menu"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 16.5
offset_right = 100.0
offset_bottom = 47.5
grow_horizontal = 2
grow_vertical = 2
text = "Quit to Main Menu"

[node name="Quit to Desktop" type="Button" parent="Menu"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 56.5
offset_right = 100.0
offset_bottom = 87.5
grow_horizontal = 2
grow_vertical = 2
text = "Quit to Desktop"

[node name="Options" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="Options"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -158.5
offset_top = -68.0
offset_right = 158.5
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
columns = 2

[node name="DisplayText" type="Button" parent="Options/GridContainer"]
layout_mode = 2
text = "Display Mode"
flat = true

[node name="FullscreenButton" type="Button" parent="Options/GridContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(190, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Fullscreen
"

[node name="WindowedButton" type="Button" parent="Options/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(190, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Windowed
"

[node name="Master" type="Button" parent="Options/GridContainer"]
layout_mode = 2
text = "Master"
flat = true

[node name="MasterVolume" type="HSlider" parent="Options/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
min_value = -30.0
max_value = 0.0
rounded = true

[node name="Music" type="Button" parent="Options/GridContainer"]
layout_mode = 2
text = "Music"
flat = true

[node name="MusicVolume" type="HSlider" parent="Options/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
min_value = -30.0
max_value = 0.0
rounded = true

[node name="Effect" type="Button" parent="Options/GridContainer"]
layout_mode = 2
text = "Effect"
flat = true

[node name="EffectVolume" type="HSlider" parent="Options/GridContainer"]
unique_name_in_owner = true
process_mode = 2
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
min_value = -30.0
max_value = 0.0
rounded = true

[node name="Back" type="Button" parent="Options"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.5
offset_top = 80.5
offset_right = 22.5
offset_bottom = 111.5
grow_horizontal = 2
grow_vertical = 2
text = "Back"

[connection signal="pressed" from="Menu/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Menu/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Menu/Quit to Main Menu" to="." method="_on_quit_to_menu_pressed"]
[connection signal="pressed" from="Menu/Quit to Desktop" to="." method="_on_quit_to_desktop_pressed"]
[connection signal="pressed" from="Options/GridContainer/FullscreenButton" to="." method="_on_options_fullscreen_pressed"]
[connection signal="pressed" from="Options/GridContainer/WindowedButton" to="." method="_on_options_windowed_pressed"]
[connection signal="value_changed" from="Options/GridContainer/MasterVolume" to="." method="_on_options_master_volume"]
[connection signal="value_changed" from="Options/GridContainer/MusicVolume" to="." method="_on_options_music_volume"]
[connection signal="value_changed" from="Options/GridContainer/EffectVolume" to="." method="_on_options_effect_volume"]
[connection signal="pressed" from="Options/Back" to="." method="_on_options_back_pressed"]
